--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Small sweet game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Rock, Paper, Scissors!!</h1>
+<h1>Rock, Paper, Scissors🤍🫂</h1>
     <details>
         <summary>Rules of the game</summary>
-        <p class="sum-p">Two players simultaneously choose one of three hand gestures: rock, paper, or scissors.</p>
-        <p class="sum-p">Rock crushes scissors, scissors cut paper, and paper covers rock.</p>
-        <p class="sum-p">If both players choose the same gesture, it's a tie, and they play again.</p>
-        <p class="sum-p">The first player to win two out of three rounds wins the game. </p>
+        <p>Two players simultaneously choose one of three hand gestures: rock, paper, or scissors.</p>
+        <p>Rock crushes scissors, scissors cut paper, and paper covers rock.</p>
+        <p>If both players choose the same gesture, it's a tie, and they play again.</p>
+        <p>The first player to win two out of three rounds wins the game. </p>
     </details>
 
 <div class="scores">
