theme changer for light and dark mode

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Small sweet game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="dark">
 <h1>Rock, Paper, Scissors🤍🫂</h1>
-    <details>
+    <details class="dark">
         <summary>Rules of the game</summary>
         <p>Two players simultaneously choose one of three hand gestures: rock, paper, or scissors.</p>
         <p>Rock crushes scissors, scissors cut paper, and paper covers rock.</p>
@@ -23,16 +23,16 @@
 
     <h2>Choose the option: </h2>
 <div class="buttons">
-    <button id="rock">&#x1FAA8 Rock</button>
-    <button id="paper">&#x1F4C3 Paper</button>
-    <button id="scissors">&#x2702 Scissors</button>
+    <button class="dark" id="rock">&#x1FAA8 Rock</button>
+    <button class="dark" id="paper">&#x1F4C3 Paper</button>
+    <button class="dark" id="scissors">&#x2702 Scissors</button>
 </div>
 <div class="results">
     <p id="results"></p>
 </div>
 
 
-<div class="theme-changer-div">
+<div class="theme-changer-div" id="theme-changer-div">
     <div class="first-layer"></div>
     <div class="second-layer"></div>
     <img id="theme-changer" class="theme-changer" src="img/palette.png" />
